style.css
@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Shippori Antique', sans-serif;
}

*::selection {
    background-color: black;
    color: white;
}

body {
    display: grid;
    grid-template: minmax(min-content, max-content) 4fr / 1fr 5fr;
    min-height: 100vh;
    max-height: fit-content;
    background-image: url(./imgs/topography.jpg);
    background-size: contain;
}

button {
    cursor: pointer;
}

i {
    justify-self: center;
}

a {
    display: grid;
    grid-template-columns: 20px 1fr;
    align-items: center;
    gap: 10px;
    padding: 5px;
    transition: ease-out 0.3s;
}

/* ------------------ NAV BAR ------------------ */

.nav-bar {
    background-color: #0a0a0a;
    grid-row: 1 / -1;
    display: flex;
    flex-direction: column;
    gap: 50px;
    padding: 0 20px;
    font-size: 1.2em;
}

.nav-bar nav:nth-child(2) ul li:first-child a {
    background-color: rgb(21, 21, 21);
}

a:hover {
    background-color: #222222;
}

.nav-bar li {
    list-style: none;
}

h1::selection {
    background-color: white;
    color: black;
}

.nav-bar i, h1 {
    color: white;
}

a {
    text-decoration: none;
    color: white;
}

/* ------------------ HEADER ------------------ */

.header {
    background-size: cover;
    padding: 20px;
    display: flex;
    flex-direction: column;
    gap: 25px;
    border-bottom: black solid 3px;
    backdrop-filter: invert(98%);
}

        /* ------------------ TOP HEADER SECTION ------------------ */


.top-header-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 20px;
    gap: 10px
}

.top-header-section i {
    font-size: 1.5em;
}

.search-section {
    display: flex;
    align-items: center;
    flex: 1
}

.search-section label {
    background-color: transparent;
    backdrop-filter: invert() blur(1px);
    height: 100%;
    padding: 2px;
    border: black solid 3px;
}

.search-section input[type='text'] {
    background-color: white;
    border: black solid 3px;
    flex: 1;
    max-width: 30vw;
    height: 35px;
    font-size: 1.1em;
    padding-left: 5px;
}

.search-section input[type='text']:hover {
    background-color: #e2e1e1;
}

.search-section input[type='text']:focus-visible {
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
    border: black solid 4px;
    outline: none;
}

.profile-section {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    gap: 10px;
    border: black solid 3px;
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
    backdrop-filter: invert() blur(2px);
}

.top-header-section .profile-section button[type='button'] {
    height: 100%;
    display: flex;
    align-items: center;
    border: none;
    border-right: black solid 3px;
    position: relative;
    background-color: transparent;
}

.top-header-section .profile-section button[type='button']:hover {
    backdrop-filter: invert(20%);
    cursor: pointer;
}

.top-header-section .profile-section button[type='button']:active {
backdrop-filter: invert();
}

.top-header-section .profile-section button[type='button']:active i {
    color: white;
}

.profile-section > *:not(.profile-picture) {
    padding: 5px;
}

.profile-section > div {
    margin: 5px 0px 5px;
}

.profile-picture {
    background-color: grey;
    height: 45px;
    width: 45px;
    border-radius: 50%;
    border: black solid 2px;
}

        /* ------------------ BOTTOM HEADER SECTION ------------------ */

.bottom-header-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
}

.bottom-header-section button[type='button'] {
    background-color: white;
    padding: 5px 20px;
    border: black solid 3px;
    cursor: pointer;
    position: relative;
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
}

.bottom-header-section button[type='button']:hover {
    background-color: #cccccc;
}

.bottom-header-section button[type='button']:active {
    background-color: black;
    color: white;
    box-shadow: none;
    top: 3px;
    left: 3px;
}

.bottom-header-section .button-section {
    display: flex;
    justify-content: space-between;
    gap: max(15px, 2vw);
    backdrop-filter: invert() blur(2px);
    padding: 10px;
}

.bottom-header-section .profile-picture {
    height: 60px;
    width: 60px;
    background-color: grey;
    border-radius: 50%;
}

.bottom-header-section div:nth-child(2) {
    font-size: 0.8em;
}

.bottom-header-section h2 {
    font-size: 1.8em;
} 

.bottom-header-section .profile-section {
    padding: 7px;
}

.header-profile-picture, .header .profile-picture {
    background-image: url(/profile-pictures/main-profile-picture.png);
    background-size: contain;
    border: black solid 2px;
}

/* ------------------ MAIN ------------------ */

.main {
    display: grid;
    grid-template: 1fr 1fr / 3fr 1fr;
}

        /* ------------------ CONTENT ------------------ */

.content {
    padding: 10px 0px 10px 10px;
    grid-row: 1 / -1;
    display: grid;
    gap: 15px;
    grid-template-rows: minmax(min-content, max-content) 1fr;
}

.content button {
    border: none;
    padding: 0;
    margin: 0;
    height: 30px;
    width: 30px;
    background-color: white;
}

.content button:active i {
    color: black;
    
}

.content i {
    font-size: 1.7em;
    color: #6b6b6b;
}

.content h2 {
    grid-column: 1 / -1;
    align-self: flex-end;
}

.projects-grid {
    display: grid;
    grid-template: repeat(auto-fit, minmax(190px, 1fr)) / repeat(auto-fit, minmax(190px, 1fr));
    gap: 15px;
    overflow-y: scroll;
    padding-right: 20px;
}

.project {
    background-color: white;
    display: grid;
    grid-template-rows: minmax(min-content, max-content) 1fr minmax(min-content, max-content);
    border: black solid 3px;
    padding: 15px;
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
}

.project p {
    color: #505050;
}

.project .button-section {
    align-self: flex-end;
    justify-self: flex-end;
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-items: center;
}

/* ------------------ ANNOUNCEMENTS AND TRENDING ------------------ */

.announcements, .trending {
    display: grid;
    grid-template-rows: minmax(min-content, max-content) minmax(min-content, max-content);
    gap: 20px;
    padding: 20px;
}

.announcement-card, .trending-card {
    background-color: white;
    border: black solid 3px;
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
    display: grid;
}

.announcements p, .trending p {
    color: #6b6b6b;
}

hr {
    border: #b0b0b0 solid 1.8px
}

.single-announcement:hover, .trending-content:hover {
    background-color: #d9d9d9;
    cursor: pointer;
}

.single-announcement, .trending-content {
    padding: 5px;
}

.single-announcement:hover {
    background-color: #d9d9d9;
    cursor: pointer;
}

/* ------------------ TRENDING ------------------ */

.trending-content {
    display: grid;
    grid-template-columns: minmax(min-content, max-content);
    grid-auto-flow: column;
    align-items: center;
    gap: 15px;
}

.trending-content:nth-child(1) .profile-picture {
    background-image: url(profile-pictures/profile1.png);
    background-size: contain;
}

.trending-content:nth-child(3) .profile-picture{
    background-image: url(profile-pictures/profile2.png);
    background-size: contain;
}

.trending-content:nth-child(5) .profile-picture{
    background-image: url(profile-pictures/profile3.png);
    background-size: contain;
}

.trending-content:nth-child(7) .profile-picture{
    background-image: url(profile-pictures/profile4.png);
    background-size: contain;
}

